--- a/index.css
+++ b/index.css
@@ -1,9 +1,23 @@
 h1 {
-    display: flex;
+    font-family: 'Cinzel', serif;
+    font-size: 4em;
+    color: #D4AF37; /* Un dorado similar al del logo */
+    text-shadow: 2px 2px 4px #000000; /* Sombra para mayor impacto */
+    letter-spacing: 0.05em; /* Espaciado entre letras */
+    display: grid;
     justify-content: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 }
+
+.videoFondo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que el video cubra toda la pantalla */
+    z-index: -1; /* Coloca el video detrás del contenido */
+}
+
 .container {
     display: grid;
     justify-content: center;
@@ -13,7 +27,6 @@ h1 {
     grid-template-rows: repeat(3, 100px);
     gap: 10px;
     padding: 10px;
-    background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
@@ -24,9 +37,9 @@ h1 {
     align-items: center;
     width: 100px;
     height: 100px;
-    background-color: #e0e0e0;
+    background-color: #e0e0e098;
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 34px;
     font-weight: bold;
     color: #333;
     cursor: pointer;
@@ -34,10 +47,24 @@ h1 {
 }
 
 .cell:hover {
-    background-color: #d0d0d0;
+    background-color: #740503b2;
 }
 
 p {
 display: grid;
 justify-content: center;
+}
+
+/* body {
+    background-image:url(src/elden3.jpg) ;
+    background-size: cover;
+    background-position: center center;
+} */
+
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
