modificacion del modo dificil

--- a/css/normal.css
+++ b/css/normal.css
@@ -41,7 +41,7 @@ h1 {
     border-radius: 5px;
     font-size: 34px;
     font-weight: bold;
-    color: #D4AF37;
+    color: #4bf54d;
     cursor: pointer;
     transition: background-color 0.3s;
 }
