--- a/css/normal.css
+++ b/css/normal.css
@@ -30,7 +30,6 @@ h1 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
-
 .cell {
     display: flex;
     justify-content: center;
@@ -53,6 +52,10 @@ h1 {
 p {
 display: grid;
 justify-content: center;
+font-size: 20px;
+color: white;
+text-shadow: 2px 2px 4px #6def6f;
+font-family: 'Cinzel', serif;
 }
 
 .btnDiv{
@@ -91,6 +94,7 @@ body, html {
     font-family: 'Cinzel', serif;
     border: none;
     cursor: pointer;
+    
   }
   
   /* Dropdown button on hover & focus */
