--- a/css/normal.css
+++ b/css/normal.css
@@ -49,13 +49,14 @@ h1 {
     background-color: rgba(255, 255, 255, 0.436);
 }
 
-p {
+#turno{
 display: grid;
 justify-content: center;
 font-size: 20px;
 color: white;
 text-shadow: 2px 2px 4px #6def6f;
 font-family: 'Cinzel', serif;
+margin-top: -70px;
 }
 
 .btnDiv{
