--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ h1 {
     grid-template-rows: repeat(3, 100px);
     gap: 10px;
     padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     border-radius: 10px;
 }
 
