--- a/css/normal.css
+++ b/css/normal.css
@@ -30,6 +30,21 @@ h1 {
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     border-radius: 10px;
 }
+
+#contadores {
+  display: grid;
+  grid-template-columns: 6% 6% 6%;
+  justify-content: center;
+  font-size: 19px;
+  color: white;
+  text-shadow: 2px 2px 4px #6def6f;
+  font-family: 'Cinzel', serif;
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+
+
 .cell {
     display: flex;
     justify-content: center;
